--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Theme Customization #
 #######################
 
-title: J. Bravo                             # used in <title> tag & site header
+title: QingluWang                             # used in <title> tag & site header
 author: Johnny Bravo                        # used in a <meta> tag & /feed.xml
 description: >                              # used in a <meta> tag & /feed.xml
   Hello 911 emergency, there's a handsome guy in my house!
