--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Theme Customization #
 #######################
 
-title: QingluWang                             # used in <title> tag & site header
+title: 王庆路                             # used in <title> tag & site header
 author: Johnny Bravo                        # used in a <meta> tag & /feed.xml
 description: >                              # used in a <meta> tag & /feed.xml
   Hello 911 emergency, there's a handsome guy in my house!
@@ -25,7 +25,7 @@ nav_menu:
     url: /projects
     icon: /i/icons.svg#portfolio
   - name: GitHub
-    url: https://github.com/rlue/
+    url: https://github.com/QingluWang/
     icon: /i/icons.svg#github
     outbound: true      # this key sets a link to open in a new window.
   - name: Contact
