--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ nav_menu:
   - name: Posts
     url: /
     icon: /i/icons.svg#posts # icons should be 24x24 px.
-  - name: Projects
-    url: /projects
-    icon: /i/icons.svg#portfolio
+  #- name: Projects
+  #  url: /projects
+  #  icon: /i/icons.svg#portfolio
   - name: GitHub
     url: https://github.com/QingluWang/
     icon: /i/icons.svg#github
@@ -38,12 +38,12 @@ nav_menu:
     icon: /i/icons.svg#email
 
 # Objects listed here will appear on the /projects.html page.
-projects:
-  - title: Solana
-    teaser: A responsive blog template written in Sass and vanilla JavaScript.
-    url: https://github.com/rlue/jekyll-solana
-    role: Creator
-    category: Frontend Dev
+#projects:
+#  - title: Solana
+#    teaser: A responsive blog template written in Sass and vanilla JavaScript.
+#    url: https://github.com/rlue/jekyll-solana
+#    role: Creator
+#    category: Frontend Dev
 
 #################
 # Site Settings #
